--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>THIS IS A SIMPLE WEBSITE</h1>
+<p>Someday - thre will be info here</p>
 
 </body>
 </html> 
